docs/api/qiskit/0.24/qiskit.aqua.operators.expectations.PauliExpectation.mdx
---
title: PauliExpectation
description: API reference for qiskit.aqua.operators.expectations.PauliExpectation
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.expectations.PauliExpectation
---

<span id="qiskit-aqua-operators-expectations-pauliexpectation" />

# qiskit.aqua.operators.expectations.PauliExpectation

<Class id="qiskit.aqua.operators.expectations.PauliExpectation" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/operators/expectations/pauli_expectation.py" signature="PauliExpectation(group_paulis=True)">
  An Expectation converter for Pauli-basis observables by changing Pauli measurements to a diagonal (\{Z, I}^n) basis and appending circuit post-rotations to the measured state function. Optionally groups the Paulis with the same post-rotations (those that commute with one another, or form Abelian groups) into single measurements to reduce circuit execution overhead.

  **Parameters**

  **group\_paulis** (`bool`) – Whether to group the Pauli measurements into commuting sums, which all have the same diagonalizing circuit.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.operators.expectations.PauliExpectation.__init__" name="__init__" signature="__init__(group_paulis=True)">
    **Parameters**

    **group\_paulis** (`bool`) – Whether to group the Pauli measurements into commuting sums, which all have the same diagonalizing circuit.
  </Function>

  ## Methods

  |                                                                                                                                                                             |                                                                                                                                                                                            |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.aqua.operators.expectations.PauliExpectation.__init__ "qiskit.aqua.operators.expectations.PauliExpectation.__init__")(\[group\_paulis])                | **type group\_paulis**`bool`                                                                                                                                                               |
  | [`compute_variance`](#qiskit.aqua.operators.expectations.PauliExpectation.compute_variance "qiskit.aqua.operators.expectations.PauliExpectation.compute_variance")(exp\_op) | Compute the variance of the expectation estimator.                                                                                                                                         |
  | [`convert`](#qiskit.aqua.operators.expectations.PauliExpectation.convert "qiskit.aqua.operators.expectations.PauliExpectation.convert")(operator)                           | Accepts an Operator and returns a new Operator with the Pauli measurements replaced by diagonal Pauli post-rotation based measurements so they can be evaluated by sampling and averaging. |

  ### compute\_variance

  <Function id="qiskit.aqua.operators.expectations.PauliExpectation.compute_variance" name="compute_variance" signature="compute_variance(exp_op)">
    Compute the variance of the expectation estimator.

    **Parameters**

    **exp\_op** (`OperatorBase`) – The full expectation value Operator after sampling.

    **Return type**

    `Union`\[`list`, `float`, `ndarray`]

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation.
  </Function>

  ### convert

  <Function id="qiskit.aqua.operators.expectations.PauliExpectation.convert" name="convert" signature="convert(operator)">
    Accepts an Operator and returns a new Operator with the Pauli measurements replaced by diagonal Pauli post-rotation based measurements so they can be evaluated by sampling and averaging.

    **Parameters**

    **operator** (`OperatorBase`) – The operator to convert.

    **Return type**

    `OperatorBase`

    **Returns**

    The converted operator.
  </Function>
</Class>

